# WAVidBot2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.waha.yml  docker-compose.yml  main.py  pyproject.toml  railway.json
.github/workflows/: deploy.yaml  provision-oracle.yaml
infra/: .gitignore  .terraform.lock.hcl  cloud-init.yaml  env.template  main.tf  outputs.tf  provider.tf  retry_create_instance.sh  terraform.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  tfplan  variables.tf
legal/: privacy.html  terms.html
src/wabotii/: __init__.py  __main__.py
src/wabotii/api/: routes.py  routes_updated.py  schemas.py
src/wabotii/config/: settings.py
src/wabotii/services/: __init__.py  cloud.py  database.py  video.py  waha.py
src/wabotii/utils/: __init__.py  helpers.py  logging.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_helpers.py  test_schemas.py
